# VisualFaceSimilaritySearch

./: .gitignore  EXECUTION_GUIDE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  __init__.py  attention_viz.py  clip_embedder.py  config.py  data_preprocessing.py  demo_exploration.py  dinov2_embedder.py  faiss_indexer.py  gradcam.py  helpers.py  main.py  pyproject.toml  requirements.txt  setup.sh  similarity_heatmap.py  simulation.ipynb  test.ipynb
backend/: app.py
backend/services/: viz_service.py
data/: data_preprocessing.py
embeddings/: clip_embedder.py  clip_embeddings.h5  dinov2_embedder.py  dinov2_embeddings.h5
frontend/: package.json  pnpm-lock.yaml
frontend/src/: App.jsx  index.css
frontend/src/api/: index.js
frontend/src/components/: Gallery.jsx  Sidebar.jsx  SimilarityVisualizer.jsx
indexing/: faiss_indexer.py
utils/: helpers.py
visualization/: attention_viz.py  gradcam.py  similarity_heatmap.py
