[project]
name = "visual-face-similarity-search"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    # Core dependencies - compatible versions
    "torch==2.2.2",
    "torchvision==0.17.2",
    "numpy>=1.24.0,<2.0.0",
    "pandas>=2.0.0",
    "pillow>=9.5.0",
    "opencv-python>=4.8.0",
    "scikit-learn>=1.3.0",
    
    # Face recognition and embeddings
    "facenet-pytorch>=2.5.3",
    "timm>=0.9.0",
    
    # CLIP dependencies (CLIP itself needs to be installed from GitHub)
    "clip @ git+https://github.com/openai/CLIP.git",
    "ftfy>=6.1.0",
    "regex>=2023.0.0",
    
    # Transformers (optional, for alternative CLIP implementation)
    "transformers>=4.30.0",
    
    # FAISS for similarity search
    "faiss-cpu>=1.7.4",
    
    # Visualization
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    
    # Data handling
    "tqdm>=4.65.0",
    "h5py>=3.9.0",
    
    # Web framework (for future backend)
    "flask>=2.3.0",
    "flask-cors>=4.0.0",
    
    # Utilities
    "pyyaml>=6.0",
    "requests>=2.31.0",
]

